// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a DecimalNumber 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    [
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  14,123
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#CECECE",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 19,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    .
    78
  </Text>
</Text>
`;

exports[`renders a DecimalNumber without a comma separator 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    [
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  14
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#CECECE",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 19,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    ,
    23
  </Text>
</Text>
`;

exports[`renders a DecimalNumber without a decimal part 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.4}
  style={
    [
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  14,123
</Text>
`;
